* Corrected modified date/time output to account for scheduled posts being modified earlier than they are posted
* Refactored conditional comments and featured thumbnail checks into the `comments_link` and `show_featured_thumbnail` methods
* Removed `extract` function call and escaped attributes in PullQuotes Stanza
* Use `opus_primus_theme_version` in place of `wp_get_theme` calls

= CSS =
* Added Format-Aside Dashicons to Post-Format: Aside posts
* Added Flag Dashicons to Sticky Posts
* Changed Password Protected Dashicons to use the Lock

= Miscellaneous =
* Added filter `opus_primus_theme_version_text`
* Change textdomain to match theme slug
* Updated `hooks-actions.txt`
* Updated `hooks-filters.txt` (corrected reference to `opus_first_author_details_text`)
* Updated Opus Primus PullQuotes `readme.txt`

/** ------------------------------------------------------------------------- */
== Version 1.2.3 ==
* Released February 2014

= Code =
* Added more tests
* Added Featured Image thumbnail to standard post-format archive views
* Moved `featured_image` wrapper into OpusPrimusGallery::featured_image method
* Moved `secondary_images` wrapper into OpusPrimusGallery::secondary_images method
* Moved the ellipsis out of the read more link
* Refactored `$output` to use `button` class versus the button element in meta byline flags
* Removed unused parameter `$more` from `OpusPrimusPosts::excerpt_more_link` method
* Removed `$sep_location` parameter as it was not used in `browser_title` method
* Removed Featured Image thumbnail from index view
* Renamed `OpusPrimusDefaults` methods from `show_*` to `display_*`
* Set `display_page_byline` to true as theme author aesthetic choice

= CSS =
* Added post coda post format classes
* Added `dashicons` dependency to main `Opus-Primus` stylesheet
* Added `button` class to replace the button element styles
* Change to only append to the `cite` tag when it is inside the `blockquote` tag
* Center align Calendar Day table header cells